Update:  Fixed White Space on Mobile View

--- a/main/Main-Nav.css
+++ b/main/Main-Nav.css
@@ -105,7 +105,6 @@ a.nav-link {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    margin-top: 10px;
   }
 
   .nav-bar-links a.nav-link {
